Modificaciones del HTML, CSS y JavaScript

--- a/pagina.html
+++ b/pagina.html
@@ -296,7 +296,7 @@
                 <i class="fab fa-google-play"></i>
               </span>
               <span>Disponible en Google Play</span>
-            </a>
+              </a>
             <a href="#" class="button is-black">
               <span class="icon">
                 <i class="fab fa-apple"></i>
@@ -309,7 +309,7 @@
         <!-- Imagen del móvil -->
         <div class="column is-6-desktop is-12-mobile has-text-centered mt-5-mobile">
           <figure class="image is-inline-block">
-            <img src="imagenes/app-preview.png" alt="App Preview" style="max-width:300px;">
+            <img src="Imagenes/telefono2.png" alt="App Preview" style="max-width:300px;">
           </figure>
         </div>
   
