Cambios en el panel de administrador y en la estructura general de la página

--- a/pagina.html
+++ b/pagina.html
@@ -30,9 +30,9 @@
     <div class="navbar-start">
       <a class="navbar-item" href="pagina.html">Inicio</a>
       <a class="navbar-item" href="#quienes-somos">Sobre Nosotros</a>
-      <a class="navbar-item" href="#">Proyectos</a>
+      <a class="navbar-item" href="#galeria-proyectos">Proyectos</a>
       <a class="navbar-item" href="noticias.html" target="_blank">Noticias</a>
-      <a class="navbar-item" href="#">Contacto</a>
+      <a class="navbar-item" href="#contacto">Contacto</a>
     </div>
 
     <div class="navbar-end">
@@ -99,7 +99,8 @@
 
 
 <!--Hero Section-->
-    <section class="hero is-medium">
+
+<section class="hero is-medium">
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">Cambia vidas. <br>Incluida la tuya.</h1>
@@ -312,7 +313,7 @@
           <div class="card">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="https://images.unsplash.com/photo-1588776814546-ef32853aab59" alt="Salud para Todos">
+                <img src="Imagenes/imagen3Proyecto.png" alt="Salud para Todos">
               </figure>
             </div>
             <div class="card-content has-text-left">
@@ -425,6 +426,55 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <!--Sección de contacto-->
+
+  <section id="contacto">
+    <div class="container-contacto">
+      <h2>Contáctanos</h2>
+      <p>¿Tienes alguna pregunta o quieres saber más sobre nuestros proyectos? Estamos aquí para ayudarte.</p>
+      <div class="contacto-grid">
+  
+        <!-- Formulario de contacto -->
+        <div class="formulario-contacto">
+          <h3>Envíanos un mensaje</h3>
+          <form>
+            <input type="text" placeholder="Tu nombre" required>
+            <input type="email" placeholder="Tu email" required>
+            <input type="text" placeholder="Asunto del mensaje" required>
+            <textarea placeholder="Tu mensaje" rows="5" required></textarea>
+            <button type="submit">Enviar Mensaje</button>
+          </form>
+        </div>
+  
+        <!-- Información de contacto -->
+        <div class="info-contacto">
+          <h3>Información de Contacto</h3>
+          <ul>
+            <li><strong>Dirección:</strong><br>Calle Principal 123, Ciudad Esperanza, 28001</li>
+            <li><strong>Teléfono:</strong><br>+34 912 345 678</li>
+            <li><strong>Email:</strong><br>info@voluntariado.org</li>
+            <li><strong>Horario de Atención:</strong><br>Lunes a Viernes: 9:00 - 18:00</li>
+          </ul>
+        </div>
+  
+      </div>
+    </div>
+
+    <div class="mapa-contacto">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2926.2995058268307!2d-1.662429023867147!3d42.8242868056469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5092855cefdac7%3A0xab7c62765f5209e2!2sCentro%20Cuatro%20Vientos!5e0!3m2!1sen!2ses!4v1745259812224!5m2!1sen!2ses" 
+        width="100%" 
+        height="250" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"
+       >
+      </iframe>
+    </div>
+    
   </section>
 
   <!--Sección de la aplicación-->
