--- a/actividades.html
+++ b/actividades.html
@@ -2,86 +2,99 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Actividades</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Gestión de Actividades</title>
   <link rel="stylesheet" href="./bulma.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar is-light">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="#">
-        <strong>Logo</strong>
-      </a>
+
+<!-- Navbar -->
+<nav class="navbar is-light" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="admin.html">
+      <strong>← Volver</strong>
+    </a>
+  </div>
+</nav>
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Gestión de Actividades</h1>
+
+    <div class="mb-4">
+      <button class="button is-primary" id="btn-abrir-modal">+ Crear Nueva Actividad</button>
     </div>
-    <div class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item is-active">Dashboard</a>
-        <a class="navbar-item">Voluntarios</a>
-        <a class="navbar-item">Proyectos</a>
-        <a class="navbar-item" href="./actividades.html">Actividades</a>
-        <a class="navbar-item" >Solicitudes</a>
-      </div>
-    </div>
-  </nav>
 
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Añadir Actividades a un Proyecto</h1>
+    <div id="mensaje-alerta-actividad" class="notification is-success is-light" style="display:none;"></div>
 
-      <!-- Formulario para añadir actividades -->
-      <div class="box">
-        <form id="form-actividad">
-          <div class="field">
-            <label class="label">Proyecto</label>
-            <div class="control">
-              <div class="select">
-                <select id="select-proyecto">
-                  <!-- Opciones de proyectos se cargarán desde localStorage o JS -->
-                </select>
-              </div>
+    <table class="table is-fullwidth is-striped">
+      <thead>
+        <tr>
+          <th>Actividad</th>
+          <th>Horario</th>
+          <th>Descripción</th>
+          <th>Proyecto Asociado</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody id="tabla-actividades"></tbody>
+    </table>
+  </div>
+</section>
+
+<!-- Modal -->
+<div class="modal" id="modal-crear-actividad">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Crear Nueva Actividad</p>
+      <button class="delete" aria-label="close" id="btn-cerrar-modal"></button>
+    </header>
+
+    <section class="modal-card-body">
+      <form id="formulario-actividad">
+        <div class="field">
+          <label class="label">Nombre de la Actividad</label>
+          <div class="control">
+            <input class="input" id="nombre-actividad" type="text" placeholder="Nombre de la actividad">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Horario</label>
+          <div class="control">
+            <input class="input" id="horario-actividad" type="text" placeholder="Ejemplo: Lunes 10:00 - 12:00">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Descripción breve</label>
+          <div class="control">
+            <textarea class="textarea" id="descripcion-actividad" placeholder="Describe la actividad"></textarea>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Proyecto Asociado</label>
+          <div class="control">
+            <div class="select is-fullwidth">
+              <select id="select-proyecto-actividad">
+                <option value="">Selecciona un proyecto</option>
+              </select>
             </div>
           </div>
+        </div>
 
-          <div class="field">
-            <label class="label">Nombre de la Actividad</label>
-            <div class="control">
-              <input class="input" type="text" id="nombre-actividad" required>
-            </div>
-          </div>
+      </form>
+    </section>
 
-          <div class="field">
-            <label class="label">Horario</label>
-            <div class="control">
-              <input class="input" type="text" id="horario-actividad" placeholder="Ej. 10:00 - 12:00" required>
-            </div>
-          </div>
+    <footer class="modal-card-foot">
+      <button type="button" class="button is-primary" id="btn-guardar-actividad">Guardar Actividad</button>
+      <button type="button" class="button" id="btn-cancelar-modal">Cancelar</button>
+    </footer>
+  </div>
+</div>
 
-          <div class="field">
-            <div class="control">
-              <button class="button is-primary" type="submit">Añadir Actividad</button>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <!-- Tabla de actividades -->
-      <h2 class="subtitle">Actividades Registradas</h2>
-      <table class="table is-fullwidth is-striped" id="tabla-actividades">
-        <thead>
-          <tr>
-            <th>Proyecto</th>
-            <th>Actividad</th>
-            <th>Horario</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Aquí se mostrarán las actividades -->
-        </tbody>
-      </table>
-    </div>
-  </section>
-
-  <script src="./script.js"></script>
+<script src="./actividades.js"></script>
 </body>
 </html>
