--- a/noticias.html
+++ b/noticias.html
@@ -15,12 +15,13 @@
     <nav class="navbar is-white">
         <div class="navbar-brand">
           <a class="navbar-item" href="#">
-            <strong style="color:#1e6ffb">Huellas del cambio</strong>
+            <img src="Imagenes/Logo.png" alt="Logo" class="logo-navbar">
+            <strong class="nombre-pagina">Huellas del cambio</strong>
           </a>
         </div>
         <div class="navbar-menu">
           <div class="navbar-start">
-            <a class="navbar-item">Inicio</a>
+            <a class="navbar-item" href="pagina.html">Inicio</a>
             <a class="navbar-item" href="#quienes-somos">Sobre Nosotros</a>
             <a class="navbar-item">Proyectos</a>
             <a class="navbar-item">Noticias</a>
@@ -28,7 +29,7 @@
           </div>
           <div class="navbar-end">
             <div class="navbar-item">
-              <a class="button is-primary is-rounded">Únete Ahora</a>
+              <a class="button is-primary is-rounded" href="formulario.html">Únete Ahora</a>
             </div>
           </div>
         </div>
