--- a/organizaciones.html
+++ b/organizaciones.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Organizaciones Demo</title>
+  <title>Organizaciones</title>
   <link rel="stylesheet" href="./bulma.css">
+  <link rel="icon" type="image/x-icon" href="./Imagenes/Logo.png">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet">
   
 </head>
@@ -222,6 +223,7 @@
 
 <!-- SCRIPT -->
 <script src="./organizaciones.js"></script>
+
 
 </body>
 </html>
