Últimos cambios al formulario y al script

--- a/formulario.html
+++ b/formulario.html
@@ -158,6 +158,134 @@
   </div>
 </section>
 
+<!-- Formulario Organizaciones -->
+<form id="form-organizacion" class="formulario">
+  <hr class="my-4">
+  <h2 class="title is-5">Datos de la Organización</h2>
+  
+  <div class="field">
+    <label class="label">Nombre de la Organización *</label>
+    <div class="control">
+      <input id="nombre-organizacion" class="input" type="text" placeholder="Nombre de tu organización">
+      <p id="error-nombre-organizacion" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Tipo de Organización *</label>
+    <div class="control">
+      <div class="select is-fullwidth">
+        <select id="tipo-organizacion">
+          <option value="">Selecciona el tipo</option>
+          <option>ONG</option>
+          <option>Asociación</option>
+          <option>Fundación</option>
+          <option>Cooperativa</option>
+        </select>
+      </div>
+      <p id="error-tipo-organizacion" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Correo Electrónico *</label>
+    <div class="control">
+      <input id="correo-organizacion" class="input" type="email" placeholder="organization@ejemplo.com">
+      <p id="error-correo-organizacion" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Teléfono *</label>
+    <div class="control">
+      <input id="telefono-organizacion" class="input" type="tel" placeholder="+34 900 000 000">
+      <p id="error-telefono-organizacion" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Sitio Web</label>
+    <div class="control">
+      <input id="sitio-organizacion" class="input" type="url" placeholder="https://www.ejemplo.org">
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Número de Registro Legal</label>
+    <div class="control">
+      <input id="registro-organizacion" class="input" type="text" placeholder="Número de registro oficial">
+    </div>
+  </div>
+  
+  <hr class="my-4">
+  <h2 class="title is-5">Información de Contacto del Representante</h2>
+  
+  <div class="field">
+    <label class="label">Nombre del Representante *</label>
+    <div class="control">
+      <input id="nombre-representante" class="input" type="text" placeholder="Nombre completo">
+      <p id="error-nombre-representante" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Cargo *</label>
+    <div class="control">
+      <input id="cargo-representante" class="input" type="text" placeholder="Cargo en la organización">
+      <p id="error-cargo-representante" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <hr class="my-4">
+  <h2 class="title is-5">Descripción y Actividades</h2>
+  
+  <div class="field">
+    <label class="label">Descripción de la Organización *</label>
+    <div class="control">
+      <textarea id="descripcion-organizacion" class="textarea" placeholder="Describe brevemente la misión"></textarea>
+      <p id="error-descripcion-organizacion" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Principales Actividades *</label>
+    <div class="control">
+      <textarea id="actividades-organizacion" class="textarea" placeholder="Proyectos y actividades principales"></textarea>
+      <p id="error-actividades-organizacion" class="help is-danger"></p>
+    </div>
+  </div>
+  
+  <hr class="my-4">
+<h2 class="title is-5">Necesidades de Voluntariado</h2>
+
+<div class="field">
+<label class="label">Perfiles de Voluntarios Requeridos *</label>
+<div class="control">
+<textarea id="perfiles-voluntarios" class="textarea" placeholder="Describe los tipos de voluntarios que necesita tu organización"></textarea>
+<p id="error-perfiles-voluntarios" class="help is-danger"></p>
+</div>
+</div>
+
+<div class="field">
+<div class="control">
+<label class="checkbox">
+<input type="checkbox" id="terminos-organizacion">
+He leído y acepto la <a href="#">política de privacidad</a> y los <a href="#">términos de servicio</a>.
+</label>
+<p id="error-terminos-organizacion" class="help is-danger"></p>
+</div>
+</div>
+
+<div class="field mt-5">
+<button type="submit" class="button is-primary is-fullwidth">Registrarme como Organización</button>
+</div>
+
+</form>
+
+</div>
+</section>
+
+
 <script src="./script.js"></script>
 <script src="./formularios.js"></script>
 </body>
