--- a/formulario.html
+++ b/formulario.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- Botón flotante de Volver -->
-<a href="pagina.html" class="button is-link is-light boton-volver">← Volver</a>
+<a href="index.html" class="button is-link is-light boton-volver">← Volver</a>
 
 <section class="section">
   <div class="container" style="max-width: 500px;">
