--- a/proyectos-anteriores.html
+++ b/proyectos-anteriores.html
@@ -13,7 +13,7 @@
   <section class="section">
     <div class="container has-text-centered mt-6">
       <h2 class="is-sr-only">Navegación de retorno</h2>
-      <a href="pagina.html" class="button is-link is-light">← Volver</a>
+      <a href="index.html" class="button is-link is-light">← Volver</a>
     </div>
   </section>
   
