--- a/noticias.html
+++ b/noticias.html
@@ -29,7 +29,7 @@
 
   <div id="navbarBasic" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="pagina.html">Inicio</a>
+      <a class="navbar-item" href="index.html">Inicio</a>
       <a class="navbar-item" href="#quienes-somos">Sobre Nosotros</a>
       <a class="navbar-item">Proyectos</a>
       <a class="navbar-item">Noticias</a>
