Subida de todos los archivos nuevamente

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <button class="modal-close is-large" aria-label="close" onclick="cerrarModalLogin()"></button>
 </div>
 
-<!--Hero Section-->
+<!--Sección Hero-->
 
 <section id="hero" class="hero is-medium has-background">
   <div class="hero-overlay"></div> <!--Overlay para el fondo-->
