--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div id="navbarBasic" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="pagina.html">Inicio</a>
+      <a class="navbar-item" href="index.html">Inicio</a>
       <a class="navbar-item" href="#quienes-somos">Sobre Nosotros</a>
       <a class="navbar-item" href="./proyectos-anteriores.html">Proyectos</a>
       <a class="navbar-item" href="noticias.html" target="_blank">Noticias</a>
